etc/wsftDeRW/WSSLOG.H

//---------------------------------------------------------------------
//	WssLog共通ヘッダ(VB用はWssLog.bas)
//
//	[概要]
//	WssLog.dllを使用する人は、これをインクルード

#pragma once


// INIファイルのデフォルト値

#define DEFAULT_LOG_SAVEDAYS	90		// [Log] SaveDays= 90 日


//　ログのレベル定義

#define LOGLV_DEBUG			0			// デバッグ用
#define	LOGLV_TRACE			1			// トレース
#define	LOGLV_WARNING		2			// ワーニング(通常はこのレベル以上を出力)
#define	LOGLV_ERR			3			// エラー
#define	LOGLV_FATALERR		4			// 致命的エラー
#define LOGLV_INFO			5			// 情報
#define	LOGLV_ALWAYS		9			// 必ずログを出す
										// (注).頻繁に起こるものに関しては使用禁止
// ログ識別コード(6文字以内で定義)

#define	LOGC_APPCTRL		"APPCTL"	// WssAppCtrl.exe
#define LOGC_COM			"COM"		// WssCom.exe
#define LOGC_SYUUKEI		"SYUKEI"	// Syukei.exe
#define LOGC_TNIO			"TNIO"		// Tnio.exe
#define	LOGC_UNSET			"UNYOU"		// Unyou.exe
#define	LOGC_GYOSET			"GYOSET"	// GyoSet.exe
#define	LOGC_SYSSET			"SYSSET"	// SysSet.exe
#define	LOGC_TOUINJI		"TOUKA"		// Toukainji.exe
#define LOGC_WINKT			"WINKT"		// WinKT.exe
#define LOGC_MPCPROC		"MPCPRC"	// mpcproc.exe
#define	LOGC_CALDLL			"CALDLL"	// WinSousaCalc.dll
#define	LOGC_FILDLL			"FILDLL"	// Wsft.dll(GN/HTソース互換化 GNでのみ使用)
#define	LOGC_WSFT			"WSFT"		// Wsft.dll
#define	LOGC_UNDLL			"OPEDLL"	// Opesend.dll
#define	LOGC_GFTP			"GFTP"		// GFTP.exe
#define	LOGC_DLG			"WSSDLG"	// WssDialog.exe
#define	LOGC_WSSHUT			"WSSHUT"	// WssShutter.exe
#define LOGC_WSSASUP		"SUPDLL"	// Wssasup.dll
#define LOGC_TNPROC			"TNPROC"	// TnProc.exe
#define LOGC_RIREKI			"RIREKI"	// rireki.dll
#define LOGC_HSCP			"HSCP"		// hscp.dll
#define LOGC_ITA			"ITA"		// ITA.dll

// export された関数の定義

#if defined(WSSLOG_EXPORTS)
#define WSSLOG_API	__declspec(dllexport) __stdcall
#else
#define WSSLOG_API	__declspec(dllimport) __stdcall
#endif

#define	DllExport	__declspec(dllexport)


#if defined(__cplusplus)
extern	"C" {
#endif

void WSSLOG_API Winssa_Log(const char *sikibetu,long loglevel,const char * format, ...);
void WSSLOG_API Winssa_Loglevel(long loglevel);
void WSSLOG_API Winssa_Dump(const char *sikibetu,long loglevel,const void *buffer, long size);
void WSSLOG_API WLSetLogPath(const char* pszPath);
void WSSLOG_API WLSetLogLevel(long nNewLogLevel);
long WSSLOG_API WLGetLogLevel();
void WSSLOG_API WLFlushLog();
BOOL WSSLOG_API WLDeleteOldLog();
int WSSLOG_API WLGetLogPath(char* pszBuffer, int nSize);
void WSSLOG_API WLGetMyName(char *buf, int size);

#if defined(__cplusplus)
}
#endif